# micro

./: .gitignore  Cargo.toml  Makefile  boot.asm  linker.ld  mb_header.asm
libs/buddy/: Cargo.toml
libs/buddy/src/: lib.rs
libs/bump_allocator/: Cargo.toml
libs/bump_allocator/src/: lib.rs
src/: error.rs  interrupt.rs  lib.rs  vga.rs
src/arch/x86_64/: boot.asm  boot64.asm  grub.cfg  linker.ld  mb_header.asm  multiboot.asm
src/interrupt/: gdt.rs  mod.rs
src/memory/: area.rs  buddy.rs  mod.rs  stack.rs
src/memory/frame/: mod.rs
src/memory/frame/allocator/: area.rs  bitmap.rs  mod.rs
src/memory/paging/: entry.rs  mapper.rs  mod.rs  table.rs
src/memory/stack/: mod.rs
src/sync/: mod.rs  mutex.rs
src/util/: log.rs
