[package]
name = "zinc-os"
version = "0.1.0"
authors = ["Alex Egger <alex.egger96@gmail.com>"]

[lib]
crate-type = ["staticlib"]

[dependencies]
rlibc = "0.1.4"
volatile = "0.1.0"
multiboot2 = "0.1.0"
spin = "0.3.4"
bitflags = "0.7.0"

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"
