[package]
authors = ["Alex Egger <alex.egger96@gmail.com>"]
name = "zinc-os"
version = "0.1.0"

[dependencies]
bitflags = "0.7.0"
multiboot2 = "0.3.2"
once = "0.3.2"
rlibc = "0.1.4"
spin = "0.3.4"
volatile = "0.1.0"
x86_64 = "0.1.2"

[dependencies.bump_allocator]
path = "libs/bump_allocator"

[dependencies.buddy]
path = "libs/buddy"

[lib]
crate-type = ["staticlib"]

[profile]

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"
