[package]
authors = ["Alex Egger <alex.egger96@gmail.com>"]
name = "zinc-os"
version = "0.1.0"

[lib]
crate-type = ["staticlib"]

[dependencies]
bitflags = "0.7.0"
multiboot2 = "0.3.2"
rlibc = "0.1.4"
spin = "^0.4.0"
volatile = "0.1.0"
x86_64 = "0.1.2"

[dependencies.buddy]
path = "libs/buddy"

[dependencies.lazy_static]
version = "0.2.4"
features = ["spin_no_std"]

[profile]

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"
